...
    var body: some View {
        NavigationStack {
            VStack(spacing: 8) {
                TextField("Car Model", text: $carModel)
                    .padding(8)
                    .border(Color.gray)
                    .accessibilityIdentifier("CarModelTextField")
                
                Text("At least 3 characters.")
                    .font(.caption2)
                    .frame(maxWidth: .infinity, alignment: .leading)
                    .foregroundStyle(Color.gray)
                    .padding(.bottom, 8) /// Adds spacing between the button and the text field.
...
                        .padding(.horizontal, 8)
                        .font(.headline)
                })
                .padding(8)
                .background(Color.blue)
                .foregroundStyle(.white)
                .accessibilityIdentifier("CarModelSubmitButton")
                
                Spacer()
            }
            .padding()
            .navigationDestination(isPresented: $shouldStartDriving, destination: {
                StartDrivingView(carModel: carModel)
...
